feat: novo icone svg e ajustes finais

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,9 +7,19 @@
     "theme_color": "#38bdf8",
     "icons": [
         {
-            "src": "/favicon.svg",
-            "sizes": "any",
-            "type": "image/svg+xml"
+            "src": "/icon.svg",
+            "type": "image/svg+xml",
+            "sizes": "any"
+        },
+        {
+            "src": "/icon.svg",
+            "type": "image/svg+xml",
+            "sizes": "192x192"
+        },
+        {
+            "src": "/icon.svg",
+            "type": "image/svg+xml",
+            "sizes": "512x512"
         }
     ]
 }
