--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0",
     "smart-webcomponents-react": "^25.0.3",
     "styled-components": "^6.3.8",
     "vite-plugin-pwa": "^1.2.0",
